testes usando o @contended.